--- a/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.html
+++ b/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.html
@@ -19,6 +19,7 @@
                           <mat-label>Enter Mobile Number</mat-label>
                           <input
                             matInput
+                            id="mobile-1"
                             type="text"
                             placeholder="Mobile Number"
                             formControlName="msisdn"
@@ -86,6 +87,7 @@
                           <mat-label>Enter Mobile Number</mat-label>
                           <input
                             matInput
+                            id="mobile-2"
                             type="text"
                             placeholder="Mobile Number"
                             formControlName="msisdn"
@@ -153,6 +155,7 @@
                         <mat-label>Enter Mobile Number</mat-label>
                         <input
                           matInput
+                          id="mobile-3"
                           type="text"
                           placeholder="Mobile Number"
                           formControlName="msisdn"
@@ -182,6 +185,7 @@
                         <mat-label>Enter Notification Title</mat-label>
                         <input
                           matInput
+                          id="title"
                           type="text"
                           placeholder="Notification Title"
                           formControlName="title"
@@ -212,6 +216,7 @@
                         <mat-label>Enter Notification Body</mat-label>
                         <input
                           matInput
+                          id="body"
                           type="text"
                           placeholder="Notification Body"
                           formControlName="body"
