--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
@@ -25,6 +25,7 @@
                 <mat-form-field>
                   <input
                     matInput
+                    id="user_fname"
                     type="text"
                     placeholder="First Name"
                     formControlName="user_fname"
@@ -63,6 +64,7 @@
                 <mat-form-field>
                   <input
                     matInput
+                    id="mobile"
                     type="tel"
                     placeholder="Mobile Number"
                     formControlName="mobile"
@@ -103,6 +105,7 @@
                   <mat-label>Account Expiry Date</mat-label>
                   <input
                     matInput
+                    id="acc_exp_date"
                     [matDatepicker]="picker"
                     formControlName="acc_exp_date"
                     [matTooltip]="getErrorMessage1('acc_exp_date')"
@@ -110,6 +113,7 @@
                   />
                   <mat-hint>MM/DD/YYYY</mat-hint>
                   <mat-datepicker-toggle
+                    id="date-btn"
                     matIconSuffix
                     [for]="picker"
                   ></mat-datepicker-toggle>
@@ -138,6 +142,7 @@
                 <mat-form-field>
                   <input
                     matInput
+                    id="login_id"
                     type="text"
                     placeholder="Login ID"
                     formControlName="login_id"
@@ -180,6 +185,7 @@
                   <input
                     matInput
                     type="text"
+                    id="user_lname"
                     placeholder="Last Name"
                     formControlName="user_lname"
                     [matTooltip]="getErrorMessage1('user_lname')"
@@ -217,6 +223,7 @@
                 <mat-form-field>
                   <input
                     matInput
+                    id="email"
                     type="email"
                     placeholder="Email"
                     formControlName="email"
@@ -276,7 +283,11 @@
                 (change)="onPhotoSelected($event)"
                 formControlName="logo"
               />
-              <button class="btn btn-sm btn-photo" (click)="fileInput.click()">
+              <button
+                class="btn btn-sm btn-photo"
+                id="logo"
+                (click)="fileInput.click()"
+              >
                 Change Logo
               </button>
             </div>
@@ -361,6 +372,7 @@
             <mat-form-field>
               <input
                 matInput
+                id="max_sessions"
                 type="number"
                 placeholder="Number of Active Sessions"
                 formControlName="max_active_sessions"
@@ -387,6 +399,7 @@
             <mat-form-field>
               <input
                 matInput
+                id="max_duration"
                 type="number"
                 placeholder="Duration of Sessions(in Minutes)"
                 formControlName="max_duration"
@@ -417,6 +430,7 @@
             <mat-form-field>
               <input
                 matInput
+                id="max_participants"
                 type="number"
                 placeholder="Maximum Number of Participants"
                 formControlName="max_participants"
