--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
@@ -378,7 +378,7 @@
               <mat-checkbox
                 [value]="feature.featureId"
                 [checked]="isCheckFeature(feature)"
-                (change)="toggleFeatureSelection(feature.featureId)"
+                (change)="toggleFeatureSelection(feature)"
               >
                 {{ feature.name }}
               </mat-checkbox>
@@ -494,7 +494,7 @@
               <mat-checkbox
                 [value]="feature.featureId"
                 [checked]="isCheckFeature(feature)"
-                (change)="toggleFeatureSelection(feature.featureId)"
+                (change)="toggleFeatureSelection(feature)"
               >
                 {{ feature.name }}
               </mat-checkbox>
