--- a/mcarbonPortal/src/app/session-management/session-management.component.scss
+++ b/mcarbonPortal/src/app/session-management/session-management.component.scss
@@ -43,6 +43,21 @@ th {
   color: #009688 !important;
 }
 
+.btn-dark {
+  background-color: black;
+}
+
+.btn-secondary {
+  background-color: #e1e1e1 !important;
+}
+
+.btn-danger,
+.btn-dark,
+.btn-secondary,
+.btn-success {
+  min-width: 90.41px;
+}
+
 .box {
   height: 40px;
   margin-top: 6px;
